# TrustChain

./: .gitignore  CMakeLists.txt  LICENSE  README.md  trustchain_credentials.example.cmake
cmake/: trustchain.cmake
doc/: basic_design.md  detailed_design.md  requirements_definition.md  security_architecture.md  test_specification.md
dummy_app/: CMakeLists.txt  main.cpp
include/: TrustChainCore.hpp  TrustChainQt.hpp
scripts/: setup_binmarkmanager.ps1
src/: TrustChainCore.cpp  TrustChainQt.cpp
test/: CMakeLists.txt  MockNetworkAccessManager.hpp  test_core.cpp  test_main.cpp  test_qt.cpp
